--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
+    "chalk": "^2.4.1",
     "cli-ux": "^4.9.1",
     "es6-promisify": "^6.0.1",
     "git-clone": "^0.1.0",
     "global": "^4.3.2",
+    "listr": "^0.14.2",
+    "ora": "^3.0.0",
     "replace-in-file": "^3.4.2"
   },
   "devDependencies": {
