--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "chalk": "^2.4.1",
     "cli-ux": "^4.9.1",
     "es6-promisify": "^6.0.1",
-    "git-clone": "^0.1.0",
     "global": "^4.3.2",
     "listr": "^0.14.2",
     "ora": "^3.0.0",
-    "replace-in-file": "^3.4.2"
+    "replace-in-file": "^3.4.2",
+    "simple-git": "^1.105.0"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1",
