--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "listr": "^0.14.2",
     "ora": "^3.0.0",
     "replace-in-file": "^3.4.2",
+    "rimraf": "^2.6.2",
     "simple-git": "^1.105.0"
   },
   "devDependencies": {
