--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
     "chalk": "^2.4.1",
+    "child_process": "^1.0.2",
     "cli-ux": "^4.9.1",
     "es6-promisify": "^6.0.1",
     "global": "^4.3.2",
@@ -20,7 +21,9 @@
     "parameterize": "^0.1.0",
     "replace-in-file": "^3.4.2",
     "rimraf": "^2.6.2",
-    "simple-git": "^1.105.0"
+    "simple-git": "^1.105.0",
+    "tmp": "^0.0.33",
+    "util": "^0.11.1"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1",
